--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,13 @@ dependencies {
     // work manager dependency
     implementation "android.arch.work:work-runtime:$versions.work"
 
-    implementation ('com.squareup.retrofit2:retrofit:2.3.0'){
+    implementation ("com.squareup.retrofit2:retrofit:$versions.retrofit"){
         // exclude Retrofit’s OkHttp dependency module and define your own module import
         exclude module: 'okhttp'
     }
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation "com.squareup.retrofit2:converter-gson:$versions.retrofit"
     implementation "com.google.code.gson:gson:$versions.gson"
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation "com.squareup.okhttp3:logging-interceptor:$versions.loggin_interceptor"
+    implementation "com.squareup.okhttp3:okhttp:$versions.okttp"
 }
