- update manifest with changed activity name - enable databinding in gradle - create/add assets folder with sample json response for reference

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,12 @@ android {
         }
     }
 
+//    enable databinding
+    dataBinding {
+        enabled = true
+    }
+
+//    add java 8 features support
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
