--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "android.arch.lifecycle:extensions:$versions.lifecycle"
 
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$versions.espresso"
+
+
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "android.arch.lifecycle:extensions:$versions.lifecycle"
 
     implementation "com.android.support:appcompat-v7:$versions.support"
     implementation "com.android.support:support-v4:$versions.support"
@@ -62,3 +64,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$versions.loggin_interceptor"
     implementation "com.squareup.okhttp3:okhttp:$versions.okttp"
 }
+
+
+apply plugin: 'kotlin-kapt'
