--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,11 @@ task clean(type: Delete) {
 
 ext.versions = [:]
 versions.arch_core = "1.1.1"
-versions.lifecycle = "1.1.1"
-versions.support = "27.1.1"
+versions.lifecycle = "2.0.0-beta01"
+versions.support = "1.0.0-beta01"
+versions.test = "1.1.0-alpha3"
 versions.junit = "4.12"
-versions.espresso = "3.0.2"
+versions.espresso = "3.1.0-alpha3"
 versions.constraint_layout = "1.1.2"
 versions.glide = "3.8.0"
 versions.work = "1.0.0-alpha04"
