- update dependencies - add room dependency

--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,9 @@ versions.junit = "4.12"
 versions.espresso = "3.0.2"
 versions.constraint_layout = "1.1.2"
 versions.glide = "3.8.0"
-versions.work = "1.0.0-alpha04"
+versions.work = "1.0.0-alpha05"
 versions.gson = "2.8.4"
 versions.retrofit = "2.3.0"
 versions.okttp = "3.8.1"
 versions.loggin_interceptor = "3.4.1"
+versions.roomVersion = "1.0.0"
