--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,12 @@ dependencies {
 
     implementation "com.squareup.okhttp3:logging-interceptor:$versions.loggin_interceptor"
     implementation "com.squareup.okhttp3:okhttp:$versions.okttp"
+
+
+    // Room components
+    implementation "android.arch.persistence.room:runtime:$versions.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$versions.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$versions.roomVersion"
 }
 
 
