- add emojitext emojitext compat support libs - update kotlin plug-in 1.2.60

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,13 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$versions.roomVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$versions.roomVersion"
     androidTestImplementation "android.arch.persistence.room:testing:$versions.roomVersion"
+
+
+    //EmojiCompat support library
+    implementation "com.android.support:support-emoji:$versions.support"
+    implementation "com.android.support:support-emoji-appcompat:$versions.support"
+    implementation "com.android.support:support-emoji-bundled:$versions.support"
+
 }
 
 
