--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -41,3 +41,4 @@ versions.retrofit = "2.3.0"
 versions.okttp = "3.8.1"
 versions.loggin_interceptor = "3.4.1"
 versions.roomVersion = "1.0.0"
+versions.support_annotations = "24.2.0"
