--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 
 
 
+    // implementing typeDef
     implementation "com.android.support:support-annotations:$versions.support_annotations"
 
 }
